--- a/2_ProjectDescription/A02_ProjectDescription_averseng.tex
+++ b/2_ProjectDescription/A02_ProjectDescription_averseng.tex
@@ -29,90 +29,114 @@ Key objectives of the proposed project(s) of the ETH Fellow, methods to be emplo
 	\parbox{\textwidth}{%
 		Integral equations are a class of mathematical methods to recast time-harmonic scattering problems into functional equations satisfied by surface densities defined on the scattering obstacle. Various techniques are known to approximate the solution of those equations numerically. In many cases, the system matrix of the discrete problem is ill-conditioned. Unfavorable cases typically involve scatterers with singularities like edges or conical points, and very low / very high frequency regimen. 
 		In this research project, we aim at designing new numerical schemes for integral equations that are well conditioned, able to deal with complex geometry of the scatterers and robust in the low and high frequency limits. Mathematical analysis will be used to prove rigorously the favorable properties of those new methods. Moreover, the methods will be systematically implemented and tested numerically to illustrate the theoretical findings. 
-		The first method we will design is a combined-field method for multi-screens. Multi-screens are among the most general and complex types of scatterers that are currently tackled by the litterature. Combined field methods are a known class of methods for integral equations that are very efficient for simple scatterers but have failed for simple screens. The recent formalism of multi-screens seems perfectly fitted for the application of this idea and our preliminary numerical tests indicate that the idea is extremely promising. 
-		The second method is a conformal mapping preconditioner for integral equations on polygons. This is a generalization of the applicant’s thesis work. The heart of the idea is a simple identity relating the conformal mapping of the polygon into a circle to the Dirichlet-Neumann operator. This new understanding of the Dirichlet-Neumann operator translates into a new preconditioner and hints at a new kind of theoretical tools to analyze integral equations on polygons. Very promising preliminary analysis and numerical tests are readily available. 
-		Long term, we have in mind the following objectives. Pursue generalizations of the previous ideas to increasing levels of complexity, to fill the gap between theory and practical applications. Especially adapting all those methods to the electromagnetic integral equations in dimensions 3.
+		First, we will design a combined-field method for multi-screens, which are among the most general and complex types of scatterers that are tackled in the current literature. Combined field methods are a known class of methods for integral equations that are very efficient for massive scatterers but have failed for simple screens. The recent formalism of quotient-space for multi-screens seems perfectly suited for the application of this idea as suggested by preliminary numerical tests.
+		Second, we will develop ``conformal preconditioners" for integral equations on polygons. This is a generalization of my thesis work, where the heart of the idea is a simple identity relating the conformal mapping of a given polygon into a circle to the Dirichlet-Neumann operator. This leads naturally to the formulation of new preconditioners and hints at a new kind of theoretical tools to analyze integral equations on polygons. Very promising preliminary analysis and numerical tests are readily available. 
+		In the long run, we have in mind the following objectives. Pursue generalizations of the previous ideas to increasing levels of complexity, to fill the gap between theory and practical applications. Especially adapting all those methods to electromagnetic integral equations in dimensions 3.
 	}%
 }
 
 \section*{2.2 Project details}
 (rationale for the proposed work, goals, experimental approach and/or methods, milestones, expected output, specific role of the ETH Fellow, timetable; not to exceed 5 pages)
 
-\subsection*{Introduction}
+\subsection*{Topic, state of research and open problems}
 
 
-\subsubsection*{Scattering problems}	
+\subsubsection*{Forward scattering problems in frequency domain}	
 
-Assume that an incident harmonic wave of frequency $k$ is sent to an obstacle, or a material heterogeneity (an airplane in the sky, a crack in a material, a tumor in the body...). The presence of the obstacle generates a scattered field propagating away from this heterogeneity. The shape and intensity of this scattered field depends essentially on the location, geometry and material properties of the scatterer. In many contexts it is fundamental to predict by numerical computation, with high fidelity and in a short time, the scattered field from the \textit{a priori} knowledge of the scattering object and incident wave. 
+Assume that an incident time-harmonic wave of frequency $k$ impinges on an obstacle, or a material heterogeneity (an airplane in the sky, a crack in a material, a tumor in the body...). The presence of the obstacle generates a scattered field propagating away from this heterogeneity. The shape and intensity of this scattered field depends essentially on the location, geometry and material properties of the scatterer. In many contexts it is fundamental to predict by numerical computation, with high fidelity and in a short time, the scattered field from the \textit{a priori} knowledge of the scattering object and incident wave. This is important for engineering (acoustics, electromagnetism) and is also an essential step in most algorithms for inverse problems.
 
 Scattering problems arise for several different types of waves, by increasing level of complexity:
 \begin{itemize}\itemsep-.2em 
 	\item[-] Acoustics, sound waves in dimensions 2 and 3.
 	\item[-] Electromagnetism, Maxwell equations
 	\item[-] Linear elasticity. 
-\end{itemize} 
-Usually, practical applications involve the last two kinds of waves, at high frequency, and obstacles with complex geometries.  
+\end{itemize}   
 
-\subsubsection*{Integral equations}
+This project focuses on the following aspects of the problem.
+\begin{itemize}
+	\item[-] We look for extension and improvements of existing numerical methods in the specific case where the scatterer is a ``screen", that is, an object modeled by an infinitely thin layer. In dimension 2, this translates into open lines, and open surfaces in dimension 3. Multi-screens will also be considered. Those are generalizations of screens, in particular admitting junctions. 
+	\item[-] The key parameter is the wave frequency $k$. High-frequency problems are challenging because they require finer discretization. Moreover, methods that are efficient at medium frequencies often present instabilities in the high or low frequency ranges. In this project, we aim at designing methods with provably robust behavior with respect to frequency. 
+\end{itemize}
 
-Among the standard mathematical tools most adapted to this task are the formalism of integral equations and the Galerkin boundary element method (BEM). Reference monographs include e.g. \cite{mclean2000strongly,sauter2010boundary}). The discretization of integral equations by BEM leads to dense linear systems, which, in real-life applications, often have more than $10^6$ unknowns. This makes it prohibitive to solve the linear system by a direct method such as LU factorization, and instead, it is classical to use iterative methods such as GMRES \cite{saad1986gmres}.
+\subsubsection*{Integral equations and boundary element methods (BEM)}
 
-For the so-called first-kind integral equations, powerful mesh-related convergence results are well-known, but the linear systems are notoriously ill-conditioned, causing the iterative solvers to progress very slowly. Active research has been devoted to this issue in the past 30 years. On the one hand, some teams have targeted the iteration (matrix-vector product) time by developing compression and acceleration methods e.g. Fast Multipole Methods \cite{greengard1987fast} and H-matrices \cite{hackbusch1999sparse}. On the other hand, other teams have focused on finding suitable preconditioners in order to reduce the number of GMRES iterations. In this branch, \cite{steinbach1998construction} was a pioneer work. 
+Among the standard mathematical tools most adapted to this task are the formalism of integral equations and the Galerkin boundary element method. Reference monographs include e.g. \cite{mclean2000strongly,sauter2010boundary}). The discretization of integral equations by BEM leads to dense linear systems, which, in real-life applications, often have more than $10^6$ unknowns. This makes it prohibitive to solve the linear system by a direct method such as LU factorization. Instead, the development of efficient compression and acceleration methods for the linear systems opened the way for resolutions using iterative methods such as GMRES \cite{saad1986gmres}.
 
-Second-kind integral equations on the other hand are known to enjoy better stability with respect to discretization parameters, and for this reason, in many instances, researchers have tried to avoid the use of first-kind integral equations despite their simplicity. Nevertheless, the approximation properties of the second-kind formulations are less clear, and they degenerate for complex scatterers such as screens. 
+For the Galerkin BEM in the context of 	first-kind integral equations, a comprehensive convergence theory is available, but the linear systems are notoriously ill-conditioned for high-resolution discretizations, causing the iterative solvers to progress very slowly. Active research has been devoted to this issue in the past 30 years. On the one hand, some teams have targeted the iteration (matrix-vector product) time by developing compression and acceleration methods e.g. Fast Multipole Methods \cite{greengard1987fast} and H-matrices \cite{hackbusch1999sparse}. On the other hand, other teams have focused on finding suitable preconditioners in order to reduce the number of GMRES iterations. In this branch, \cite{steinbach1998construction} was a pioneer work. 
+
+Second-kind integral equations on the other hand are known to enjoy better stability with respect to discretization parameters, and for this reason, in many instances, researchers have tried to avoid the use of first-kind integral equations despite their simplicity. Nevertheless, the approximation properties of the second-kind formulations are less clear, and they degenerate for screen scatterers. 
 
 
-\subsection*{Recent advances and open problems}
+\subsubsection*{Recent advances and open problems}
 
 Let us survey some recent advances in the field of integral equations, and related open problems.
 
-\subsubsection*{Scattering by complex obstacles}
+\paragraph{Scattering by screens.} The obstacles become complex when they are not smooth domains or Lipschitz domains, a class of scatterers that has become very classical with \cite{mclean2000strongly}. Problems arise when singularities are present (edges, conical points). There is a particular attention devoted to screens and cracks, which are the first example of non-Lipschitz domains \cite{bruno2013high,gimperlein2019optimal,hiptmair2018closed,hiptmair2019preconditioning,hiptmair2020optimal,hiptmair2020compact,ramaciotti2017some}. In this case, the formulation of well-posed integral equations in a proper mathematical framework is well-understood since \cite{stephan1984augmented,wendland1990hypersingular}, and the recent advances lie in the proposition of more efficient numerical methods, including high-order approximation schemes and provably ``optimal preconditioners". Additionally, some more challenging geometries are considered, including multi-screens \cite{claeys2013integral,claeys2020quotient} and fractal screens \cite{chandlerWilde2017sobolev}. In those cases, the achievement was to obtain well-posed integral equations and study their theoretical properties. For those complex geometries, many natural questions remain open, e.g. convergence of the numerical methods, singularity analysis and efficient preconditioning. 
 
-The obstacles become complex when they are not smooth domains or Lipschitz domains, a class of scatterers that has become very classical with \cite{mclean2000strongly}. Problems arise when singularities are present (edges, conical points). There is a particular attention devoted to screens and cracks, which are the first example of non-Lipschitz domains \cite{bruno2013high,gimperlein2019optimal,hiptmair2018closed,hiptmair2019preconditioning,hiptmair2020optimal,hiptmair2020compact,ramaciotti2017some}. In this case, the formulation of well-posed integral equations in a proper mathematical framework is well-understood since \cite{stephan1984augmented,wendland1990hypersingular}, and the recent advances lie in the proposition of more efficient numerical methods, including high-order approximation schemes and provably ``optimal preconditioners". Additionally, some more challenging geometries are considered, including multi-screens \cite{claeys2013integral,claeys2020quotient} and fractal screens \cite{chandlerWilde2017sobolev}. In those cases, the achievement was to obtain well-posed integral equations and study their theoretical properties. For those complex geometries, many natural questions remain open, e.g. convergence of the numerical methods, singularity analysis and efficient preconditioning. 
-
-\subsubsection*{Dependance in the frequency}
-
-Although optimal preconditioners are by now available for scattering problems by Lipschitz domains and screens, \cite{steinbach1998construction,hiptmair2006operator}, it is a difficult matter to analyze the preconditioning performance in terms of the frequency number. The English school has been concerned with theoretical asymptotic analysis of the condition number of the classical integral equations without preconditioners \cite{chandler2020high} and the use of high-frequency solutions as trial functions in the Galerkin setting to improve the convergence rate \cite{chandlerWilde2015high}. Besides the popular Calder\'{o}n preconditioners \cite{christiansen2000preconditionneurs,christiansen2002preconditioner}, which have recently been adapted to the screen context \cite{bruno2012second},  ``analytic preconditioners" based on pseudo-differential calculus which exhibit good frequency robustness \cite{antoine2007generalized} have been proposed, which entertain a close link with regularized combined-field integral equations \cite{buffa2005regularized}. Although the frequency robustness properties are clear in practice and extensively surveyed e.g. \cite{boubendir2014well}, there is no mathematical theory adapted to the study of this asymptotic robustness as to now. There is a feeling in the community that pseudo-differential analysis, which is often involved in constructing those robust preconditioners, should also play a role in providing quantitative estimates for this frequency dependence buch such desirable analysis has not been achieved yet. Some recent activity around semi-classical analysis seems to go in the right direction \cite{galkowski2019wavenumber}. I will attend a conference on this topic in June 2021 at the university of Bath. 
+\paragraph{Robustness in frequency.} Although optimal preconditioners are by now available for scattering problems by Lipschitz domains and screens, \cite{steinbach1998construction,hiptmair2006operator}, it is a difficult matter to analyze the preconditioning performance in terms of the frequency. Some researchers (Chandler-Wilde, Hewett, Spence...) have been concerned with theoretical asymptotic analysis of the condition number of the classical integral equations without preconditioners \cite{chandler2020high} and the use of asymptotic-numerical methods \cite{chandlerWilde2015high}. Besides the popular Calder\'{o}n preconditioners \cite{christiansen2000preconditionneurs,christiansen2002preconditioner} for closed surfaces (recently extended to screens \cite{bruno2012second}), ``analytic preconditioners", based on pseudo-differential calculus which exhibit good frequency robustness \cite{antoine2007generalized} have been proposed for closed surfaces, which entertain a close link with regularized combined-field integral equations \cite{buffa2005regularized}. Although the frequency robustness properties are clear in practice and extensively surveyed e.g. \cite{boubendir2014well}, there is no mathematical theory adapted to the study of this asymptotic robustness as to now. Moreover, those analytic preconditioning methods fail for screens. There is a feeling in the community that pseudo-differential analysis, which is often involved in constructing those robust preconditioners, should also play a role in providing quantitative estimates for this frequency dependence buch such desirable analysis has not been achieved yet. Some recent activity around semi-classical analysis seems to go in the right direction \cite{galkowski2019wavenumber}. I will attend a conference on this topic in June 2021 at the university of Bath. 
 
 
 \subsection*{Own work}
 
-During my PhD thesis, I have contributed to the research on compression and acceleration methods for the linear systems coming from boundary element methods \cite{averseng2017fast}. 
-On the other hand, I worked on new high-frequency preconditioners for acoustics integral equations on screens in dimension 2. The first publication on this topic \cite{alouges2019new} presents the analytical framework and numerical testing. The new preconditioners are analog to those of \cite{antoine2007generalized} and present similar frequency robustness, but this time on a screen context. A significant advantage of the method is that the preconditioners obtained are ``quasi-local" in the sense that their use involve only sparse matrix, as opposed to Calder\'{o}n preconditioners which are dense and require an additional compression steps. On the other hand, \cite{averseng2019pseudo} is a more in-depth theoretical paper in which I develop a new type of pseudo-differential calculus on open curves that was used to design the preconditioners introduced in the first paper. This pseudo-differential calculus features the possibility of computing symbols of the layer potentials up to arbitrary orders and is probably a first step in assessing the frequency robustness of this approach. 
+During my PhD thesis, I have contributed to the research on compression and acceleration methods for the linear systems coming from boundary element methods \cite{averseng2017fast}. I then worked on new high-frequency preconditioners for acoustics integral equations on screens in dimension 2. The first publication on this topic \cite{alouges2019new} presents the analytical framework and numerical testing. The new preconditioners are analog to those of \cite{antoine2007generalized}. For example, for the single-layer integral equation, the following preconditioner is introduced: 
+\begin{equation}
+\label{prec}
+P_k = \sqrt{-(\omega \partial_\tau)^2 - k^2 \omega^2}
+\end{equation}
+to be compared to the preconditioners of \cite{antoine2007generalized} which take the form
+\[Q_k = \sqrt{-\Delta_S - k^2 I_d}\]
+where $\Delta_S$ is the Laplace-Beltrami operator on the closed surface $S$. 
+In eq.~\eqref{prec}, $\omega$ is a weight function defined on the screen $\Gamma$ and proportional to $\sqrt{\textup{d}(x,\partial \Gamma)}$, while $\partial_\tau$ is the tangential derivative.
+Upon using Padé approximations for the square root, the preconditioner obtained is ``quasi-local" in the sense that it involves only sparse matrices, as opposed to Calder\'{o}n preconditioners which are dense and require an additional compression step. The numerical tests demonstrate the robustness of the method with respect to $k$ and the relevance of the singular weight function $\omega$. 
+
+On the other hand, \cite{averseng2019pseudo} is a more in-depth theoretical paper in which I develop a new type of pseudo-differential calculus on open curves, providing support for the definition of $P_k$. Indeed, it is proven that the term $k^2 \omega^2$ is the optimal correction in terms of some pseudo-differential properties of the preconditioner. As in the case of closed surfaces, there remains to confirm the relevance of this pseudo-differential property in terms of numerical performance.  
 
 
 
-\subsection*{Goals and research plan}
+\subsection*{Goals and methods}
 
 
 \subsubsection*{Frequency-robust preconditioners on 3D screens}
 
-Although the numerical method published in \cite{alouges2019new} is only adapted to 2-dimensional contexts, generalizations to 3-dimensions seem possible and have been attempted in the last chapter of my thesis, with promising results. I will continue my research on this topic in order to make a publication for scalar scattering problems by screens in 3D. In turn, a natural extension to electromagnetic scattering will be possible, as a natural combination of my work and the host laboratory \cite{hiptmair2019preconditioning}. Another possible direction is to extend the pseudo-differential calculus of \cite{averseng2019pseudo} to screens in 3D. 
+Although the numerical method published in \cite{alouges2019new} is only adapted to 2-dimensional contexts, generalizations to 3-dimensions seem possible as attempted in the last chapter of my thesis, with promising results. For instance, on an open surface $\Gamma$ with the tangential gradient $\nabla$, the preconditioner \eqref{prec} becomes
+\[P_k = \sqrt{-(\omega\,\nabla \,\omega)  \cdot \nabla - k^2 \omega^2}\,.\]
+Once this theory is completed for acoustic problems, a natural extension to electromagnetic scattering is be possible, as a natural combination of my work and the host laboratory \cite{hiptmair2019preconditioning}. Indeed, in \cite{hiptmair2019preconditioning}, from the knowledge of \textit{closed-form inverses} of the single layer and hypersingular operators, a compact perturbation of the inverse of the Electric Field Integral Equation (EFIE) operator is constructed, which leads to uniform bounds for the condition number in the medium and low frequency domain. Replacing the exact inverses by the square-root operators (which are compact-equivalent to the exact inverses), it is expected to obtain similar results, while benefiting from the quasi-local form and the high-frequency robustness. After dealing with electromagnetic problems, one can attempt to generalize this method to other operators and scattering problems (Hodge-Helmholtz, Dirac operator...).
+
+Another natural direction is the extension of the pseudo-differential calculus of \cite{averseng2019pseudo} to open surfaces in 3D. 
 
 \subsubsection*{Conformal preconditioners}
 
-Another very natural generalization of my thesis work is the treatment of polygonal scatterers in 2D. We have recently found a mathematical identity that draws a close link between preconditioners and conformal mappings, hinting at completely new and powerful preconditioners adapted to corner singularities. A middle-term objective of this research project will be to analyze rigorously this idea and implement it efficiently. The expected output is a rather complete framework to solve scattering problems by polygons in 2D at any frequency, which would be a significant achievement in the domain. In addition, it might be possible to transport the pseudo-differential to the polygon via the conformal mapping, which would be a very interesting novelty. 
+It is widely known that in generalized combined-field formulations, the exterior Dirichlet to Neumann (DtN) map is the optimal coupling operator. For a simply connected domain $\Omega$ in dimension $2$, and for the Laplace problem ($k = 0$) it is possible to show that the exterior DtN $\Lambda_0$ is equal to 
+\[\Lambda_0 = \sqrt{-(\omega \partial_\tau)^2}\]
+where $\partial_\tau$ is the tangential derivative on the boundary of the polygon and \[\omega(x) = \lvert (\nabla f) \circ f^{-1}(x)\rvert\] 
+where $f$ is the conformal mapping that transforms the exterior of $\Omega$ to the exterior of the unit disk. This generalizes naturally the ideas of my thesis to more general domains in dimension 2. When $\Omega$ is the interior of a polygon, it is possible to compute efficiently the conformal mapping using the Schwarz-Christoffel formula (see e.g. \cite{driscoll2002schwarz}). By analogy with the results of my thesis, one is led to believe that, for the Helmholtz problem ($k \neq 0$), the operator
+\[\sqrt{-(\omega \partial_\tau)^2 - k^2\omega^2}\]
+may be a good approximation of the exterior DtN map $\Lambda_k$. In addition, it might be possible to transport the pseudo-differential to the polygon via the conformal mapping, which would be a way to investigate this question. Preliminary theoretical and numerical investigation are very promising. 
 
-This work would also open some possible breakthrough for 3D singularities such as wedges, which are omnipresent in practical applications. Exploring this idea is a long-term objective of this project.
+This work would also open some possible breakthrough for 3D singularities such as wedges, which are omnipresent in practical applications. 
 
-
-\subsubsection*{Integral equations on multi-screens}
+\subsubsection*{Quotient space framework for integral equations on multi-screens}
 
 Another promising idea is the possibility of formulating ``combined-field" integral equations for multi-screens. Combined field formulations are well-known for smooth scatterers and have been introduced more than 50 years ago \cite{brakhage1965dirichletsehe} as a way to guarantee the well-posedness of the equation at any wave frequency. For screens, combined field integral equations have been abandoned, because they degenerate when the obstacle no longer has interior. 
 However, we have recently discovered that the formalism of multi-screens restores a ``virtual" interior to the obstacle, and a combined-field equation can be formulated mathematically without difficulty. Preliminary numerical simulations have shown the power of this idea and it will be an immediate objective of this project to implement this idea and analyze it rigorously. This would lead without doubts to an important publication in our field. 
 
-Lastly, after his thesis, I have done a 6 month post-doctorate with Xavier Claeys, a former student of Pr. Hiptmair, on the topic of preconditioning integral equations on multi-screens using an additive Schwarz approach (see e.g. \cite{marchand2019two}). The resulting method is expected to be very robust and versatile. This collaboration will be continued during the post-doc and eventually lead to a publication. 
+Lastly, after my thesis, I have done a 6 month post-doctorate with Xavier Claeys, a former postdoc of Pr. Hiptmair, on the topic of preconditioning integral equations on multi-screens using an additive Schwarz approach (see e.g. \cite{marchand2019two}).
+
+\subsubsection*{Implementation and numerical testing}
+
+All the methods that will be developed in this project will be implemented and tested numerically. For BEM simulations in dimension 2, I have developed my own code during my thesis that I can reuse in this postdoc. For 3D simulations, I will either use the software Gipsylab, a matlab BEM software which is close in implementation to my code, or use another free software developed by the community (e.g. Bemtools, used at ETH, or BEM++).
 
 
-\subsection*{Timetable}
+
+\subsection*{Timetable and research plan}
 
 A timetable of the research project can be proposed as follows:
 \begin{itemize}\itemsep-0.2em 
-	\item[-] Submission of the paper on preconditioners for 3D screens for scalar waves by December 2020.
-	\item[-] Submission of the paper on preconditioners for 3D screens for electromagnetic waves by March 2021.
-	\item[-] Submission of the conformal preconditioners paper by July 2021.
-	\item[-] In parallel of those, work on the combined-field multi-screens formulations, expected publication by end of 2021. 
-	\item[-] Also in parallel, continued work on the additive Schwarz preconditioners and publication before end of 2021.
+	\item[-] High-frequency preconditioners for 3D screens for scalar waves by December 2020.
+	\item[-] Robust preconditioners for 3D screens for electromagnetic waves by March 2021, collaboration with Dr. Urzua-Torres.
+	\item[-] Conformal preconditioners by July 2021, collaboration with Pr. Alouges. 
+	\item[-] Combined-field multi-screens formulations by end of 2021, collaboration with Dr. Claeys. 
+	\item[-] Additive Schwarz preconditioners before end of 2021, collaboration with Dr. Claeys.
 \end{itemize}
 \begin{small}
 	\begin{thebibliography}{0}
@@ -198,6 +222,11 @@ A timetable of the research project can be proposed as follows:
 		X.~Claeys, L.~Giacomel, R. Hiptmair and C.~Urzua-Torres.
 		\newblock Quotient-Space Boundary Element Methods for Scattering at Complex Screens.
 		\newblock {\em SAM Research Report} 2020, ETH Zurich.
+		
+		\bibitem{driscoll2002schwarz}
+		T.~A.~Driscoll and L.~N.~Trefethen.
+		\newblock {\em Schwarz-christoffel mapping}
+		\newblock Cambridge University Press, 2002.
 		
 		\bibitem{galkowski2019wavenumber}
 		J.~Galkowski and E.~A.~Spence
@@ -421,9 +450,7 @@ I have not submitted any other applications.
 	O.~Steinbach and W.~L. Wendland.
 	\newblock The construction of some efficient preconditioners in the boundary
 	element method.
-	\newblock {\em Advances in Computational Mathematics} 9(1-2):191--216, 1998.
-	
-	
+	\newblock {\em Advances in Computational Mathematics} 9(1-2):191--216, 1998.	
 \end{thebibliography}
 
 
