--- a/2_ProjectDescription/A02_ProjectDescription_averseng.tex
+++ b/2_ProjectDescription/A02_ProjectDescription_averseng.tex
@@ -118,7 +118,7 @@ This work would also open some possible breakthrough for 3D singularities such a
 \subsubsection*{Quotient space framework for integral equations on multi-screens}
 
 Another promising idea is the possibility of formulating ``combined-field" integral equations for multi-screens. Combined field formulations are well-known for smooth scatterers and have been introduced more than 50 years ago \cite{brakhage1965dirichletsehe} as a way to guarantee the well-posedness of the equation at any wave frequency. For screens, combined field integral equations have been abandoned, because they degenerate when the obstacle no longer has interior. 
-However, we have recently discovered that the formalism of multi-screens restores a ``virtual" interior to the obstacle, and a combined-field equation can be formulated mathematically without difficulty. Preliminary numerical simulations have shown the power of this idea and it will be an immediate objective of this project to implement this idea and analyze it rigorously. This would lead without doubts to an important publication in our field. 
+However, we have recently discovered that the formalism of multi-screens restores a ``virtual" interior to the obstacle, and a combined-field equation can be formulated mathematically without difficulty. Preliminary numerical simulations have shown the power of this idea and it will be an immediate objective of this project to implement this idea and analyze it rigorously.
 
 Lastly, after my thesis, I have done a 6 month post-doctorate with Xavier Claeys, a former postdoc of Pr. Hiptmair, on the topic of preconditioning integral equations on multi-screens using an additive Schwarz approach (see e.g. \cite{marchand2019two}).
 
