small corrections on invitation letter

--- a/5_InvitationLetter/A05_InvLetter_Averseng.tex
+++ b/5_InvitationLetter/A05_InvLetter_Averseng.tex
@@ -95,9 +95,9 @@ several directions:
   curves.
 \item He exploited the new pseudo-differential calculus for the construction of 
   micro-local preconditioners for Helmholtz BIEs. As demonstrated by numerical tests those
-  allow effiicient implementation and perform excellently over wide ranges of frequencies.
+  allow efficient implementation and perform excellently over wide ranges of frequencies.
 \end{itemize}
-This work provides many promising starting points further research, which can tackle open
+This work provides many promising starting points for further research, which can tackle open
 surfaces in 3D (preliminary work already documented in the thesis) and scattering problems
 in electromagnetics and linear elasticity.
 
@@ -108,8 +108,8 @@ but shifting to open curves in 2014, when I won an ETHIRA grant for a project ab
 "Scattering at complex screens". Jointly with C.~Urz\'ua-Torres in her PhD work we
 succeeded in finding operator preconditioners for Galerkin boundary element methods (BEM)
 for all first-kind BIEs for both acoustic and electromagnetics. However, our work has a
-blind spot: We could never made explicit the dependence of crucial constants on the
-frequency. Further progress will require technique's like those invented by Dr.~Averseng.
+blind spot: we could never make explicit the dependence of crucial constants on the
+frequency. Further progress will require techniques like those invented by Dr.~Averseng.
 
 Since 2014 I also collaborated with Dr.~X.~Claeys from LJLL, UPMC, Paris, to achieve a
 deeper understanding of BIEs on complicated open surfaces, so-called \emph{complex
@@ -136,7 +136,7 @@ mathematics. It would enhance his profile in the community and give him greater
 independence in his contributions to teaching. His outstanding communication skills would also
 make him a great messenger for ETH as a leading research institution.
 
-Summing up, Dr. Averseng is \textbf{worthy and outstanding candidate} for an ETH
+Summing up, Dr. Averseng is a \textbf{worthy and outstanding candidate} for an ETH
 Postdoctoral Fellowship and, in my opinion the case for selecting him is very strong.
 	
    \closing{Yours sincerely,}
